* What is new in gsl-2.4:

** added routines to compute integrals with Hermite quadrature
   (based on IQPACK)

** added routines for Hermite polynomials, gsl_sf_hermite_*
   (Konrad Griessinger)

** added new nonlinear least squares example for fitting
   a Gaussian to data

** deprecated routines:
     gsl_sf_coupling_6j_INCORRECT
     gsl_sf_coupling_6j_INCORRECT_e

** deprecated routine 'gsl_linalg_hessenberg' (replaced
   by gsl_linalg_hessenberg_decomp)

** removed routines which were deprecated in v2.1:
     gsl_bspline_deriv_alloc
     gsl_bspline_deriv_free

** changed COD expression to Q R Z^T instead of Q R Z to
   be consistent with standard texts

** added check for nz == 0 in gsl_spmatrix_get
   (reported by Manuel Schmitz)

** permit zero-dimension blocks, vectors, matrics, subvectors,
   submatrices, and views of the above (bug #49988)

** added routine gsl_linalg_COD_lssolve2 for regularized
   least squares problems

* What was new in gsl-2.3:

** bug fix in documentation for gsl_linalg_LU_refine
   (bug #49728, Joey De Pauw)

** added gsl_multifit_linear_tsvd and gsl_multifit_wlinear_tsvd
   to give user more control over cutoff for truncated SVD

** added routines for Generalized Cross Validation for
   regularized linear least squares

** improved rstat example program and added documentation for
   gsl_rstat_sd_mean (Jonathan Leto)

** added function gsl_multifit_linear_rank

** bug fix in nonlinear least squares when using data weights with
   finite-difference Jacobian

** add 2D subspace method for large systems (multilarge_nlinear)

** bug fix in gsl_ran_beta for small parameters
   (bug #47646, Yu Liu)

** bug fix in gsl_complex_tan for negative imaginary arguments
   (bug #47347, Yu Liu)

** doc bug fix: value of golden ratio

** fixed scaling issue in 2D subspace nonlinear least squares
   method

** optimize dogleg methods to calculate Gauss-Newton point
   only when needed

* What was new in gsl-2.2.1:
